[package]
name = "renv"
description = "Print your environment variables"
categories = ["command-line-utilitiess"]
respoitory = "https://github.com/melkstam/renv"
version = "0.1.0"
edition = "2021"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
colored = "2"
tabled = { version = "0.10.0", features = ["color"] }
